# gstore

./: .codecov.yml  .coveragerc  .flake8  .gitignore  .pylintrc  .readthedocs.yaml  .readthedocs.yml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  MAINTAINERS.rst  MANIFEST.in  Makefile  README.md  README.rst  SECURITY.rst  codecov.yml  debug.el  default.mk  ghsync.py  pyproject.toml  requirements-dev.txt  requirements.in  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: build-and-test.yml  build.yml  ci.yml  docs.yml  lint.yml  main.yml
docs/: Makefile  conf.py  index.rst  installation.rst  license.rst  logging.rst  overview.rst  usage.rst
ghs/: __main__.py  args.py  cli.py  ghs.py  http.py  repo.py
ghsync/: repo.py
gstore/: __init__.py  __main__.py  args.py  cli.py  client.py  env.py  exceptions.py  http.py  logger.py  models.py  repo.py
requirements/: requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
tests/: conftest.py  test_args.py  test_cli.py  test_client.py  test_env.py  test_exceptions.py  test_main.py  test_repo.py
