[metadata]
license_file = LICENSE
description-file = README.rst
long_description_content_type = text/x-rst

[tool:pytest]
# Python traceback printing - standard library formatting
addopts = --tb=native --verbose

[flake8]
exclude=.git,__pycache__,.pytest_cache,.venv,build,dist,.eggs
application-import-names=gstore,tests
import-order-style=smarkets
max-complexity = 10
